blackbox-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: blackbox
  name: blackbox
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: blackbox
    spec:
      containers:
      - image: prom/blackbox-exporter
        name: blackbox
        ports:
        - containerPort: 9115
        resources: {}
        volumeMounts:
      restartPolicy: Always
status: {}
