blackbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: blackbox
  name: blackbox
  namespace: monitoring
spec:
  ports:
  - name: "9115"
    port: 9115
    targetPort: 9115
  selector:
    io.kompose.service: blackbox
  type: ClusterIP
status:
  loadBalancer: {}
