netdata-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: netdata-service
  namespace: monitoring
spec:
  ports:
  - name: "19999"
    port: 19999
    targetPort: 19999
  selector:
    io.kompose.service: netdata
  type: ClusterIP
status:
  loadBalancer: {}
